fix drawer z-index

--- a/less/boxmenu.less
+++ b/less/boxmenu.less
@@ -1,4 +1,5 @@
 .navigation{z-index: 600;}
+.drawer { z-index: 1500; }
 
 .location-menu {padding-top: 0px !important;}
 
